# koraos

./: .gitignore  AGENTS.md  CMAKE_README.md  CMakeLists.txt  MIGRATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  SETUP_CLANGD.md  UART_SETUP.md  build-kernel.sh  build.sh  create-sd-image.sh  createfs  run-qemu.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
cmake/: aarch64-toolchain.cmake
docs/: developer-guide.md  repository-guidelines.md
include/: common.h  console.h  gpio.h  memory_access.h  mini_uart.h  mm.h  string.h  utils.h
include/peripherals/: base.h  pl011.h
project_doc/: roadmap.md
src/: boot.S  console.c  gpio.c  kernel.c  linker.ld  memory_access.c  mini_uart.c  utils.S
src/lib/: string.c
